css/main.css
/* ... */
#vidButton1:hover {
	background-color: #f98b09;
	cursor: pointer;
}

#vidButton2:hover {
	background-color: #f98b09;
	cursor: pointer;
}
/*.creamBg {
	background-color: #faf1e7;
}*/



.storyPost h3 {
 font-family: 'Lato', sans-serif;
	color: #00bff3;
	font-weight: 700;
	font-size: 34px;
}

.storyPost h4 {
 font-family: 'Lato', sans-serif;
	color: #292929;
	font-weight: 400;
	font-size: 20px;
}

.storyPost a {
	color: #00bff3;
	float: right;
	text-decoration: underline;
}

.storyPost img {
	border-radius: 40px;
}


.researchCon {
	padding-top: 80px;
	padding-bottom: 80px;
}

.researchCon h2
{
	font-family: 'bebasregular', serif;
	word-spacing: 10px;
	margin-bottom: 20px;

}

.stories {
	padding-top: 10px;
}

.stories h2
{
	font-size: 20px;
	word-spacing: 5px;
	padding-top: 0px;
}

.stories h3
{
	font-size: 16px;
}

.stories a
{
	padding-bottom: 10px;
}
/*.ourResearchBg
{
	background-color: #FFF;
}*/

/*==============Story Form========================*/

.storyForm label
{
	font-family: 'Lato', sans-serif;
	color: #292929;
	padding-top: 20px;
	font-size: 20px;
	padding-bottom: 5px;
}

.storyButton input
{
	padding: 10px;
	background-color: #FFF;
	border: 1px solid #00bff3;
	border-radius: 10px;
	margin-bottom: 20px;
	cursor: pointer;
}

.storyButton input:hover
{
	background-color: #00bff3;
	color: #FFF;
}

/*==============Thank you========================*/


.thankYou h2
{
	font-family: 'Roboto Slab', serif;
	color: #1ebdeb;
	font-weight: 100;
	margin-top: 40px;	
	padding-bottom: 10px;
	text-align: center;
	margin-top:200px;
}

.thankYou p
{
	font-family: 'Lato', sans-serif;
	color: #292929;
	padding-top: 20px;
	font-size: 20px;
	padding-bottom: 30px;
	text-align: center;
}











/*==============Treatment========================*/

.banner7 img{
width: 600px;


}

.treatmentBg
{
	background-image: url(../images/treatmentBanner.jpg);
	background-repeat: no-repeat;
	background-size: cover;
	height: 100%;
}

.treatmentBg img {
margin-left: 30%;
width: 40%;
margin-top: 150px;

}

.topBannertreat
{
	display: flex;
}

.treatment
{
	padding-top:60px;
	padding-bottom:60px;
}

.treatment h2
{
	font-family: 'Roboto Slab', serif;
	color: #1ebdeb;
	margin-top: 40px;
	font-weight:100;	
}


.treatment h4
{
	font-family: 'Lato', sans-serif;
	color: #8d8d8d;
	font-size: 20px;
	margin-bottom: 10px;
	margin-top: 20px;	
}

.treatment p
{
	font-family: 'Lato', sans-serif;
	color: #8d8d8d;
	margin-bottom: 30px;
	line-height: 25px;
}


.treatFund h3
{
	font-family: 'Lato', sans-serif;
	color: #8d8d8d;
	font-size: 20px;
	margin-bottom: 10px;
	margin-top: 20px;	
}

.treatFund p
{
	font-family: 'Lato', sans-serif;
	color: #8d8d8d;
	margin-bottom: 30px;
	line-height: 25px;
}

.treatmentPrograms a {
	text-decoration: underline;
}

.treatmentMore {
	float: right;
	margin-bottom: 20px;

}

.startupBg
{
	background-color: #5e5e5e;
	
	padding-top:60px;
	padding-bottom:60px;	
	margin-bottom: 60px;
	margin-top: 50px;
}

.startUptreat h2
{
	font-family: 'bebasregular', sans-serif;
	font-size: 1.5em;
	color: #1ebdeb;
	margin-top: 40px;
	text-align: center;

}

.startUptreat p
{
	font-family: 'Lato', sans-serif;

	text-align: center;
	color: #FFF;
	margin-bottom: 30px;
	line-height: 25px;
	margin-top: 20px;
}

.transHouse
{
	padding:90px;
	background-color: #fff;
	margin-top: 60px;
	margin-bottom: 60px;
}

.transHouse h2
{
	font-family: 'bebasregular', sans-serif;
	font-size: 2em;	
	word-spacing: 10px;	
}

.transHouse h3
{
	font-family: 'Lato', sans-serif;
	color: #5e5e5e;
	margin-top: 20px;
	font-size: 20px;	
}

.transHouse p
{
	font-family: 'Lato', sans-serif;
	color: #5e5e5e;
	margin-top: 10px;
	margin-bottom: 25px;
	line-height: 25px;
}

.transHouse a
{

	text-decoration: underline;
	color: #00bff3;
}


.treatFund img {
	height: 500px;
}

.spacing {
	height: 100px;
}



/*==============ADMIN========================*/

.paddingHelp{
	padding-top: 150px;
}

.login h2{
	font-family: 'bebasregular', sans-serif;
	word-spacing: 5px;
	color: #1ebdeb;
}

.adminBtn {
	padding: 10px;
	border: 1px solid #1ebdeb;
	background-color: #FFF;
	cursor: pointer;
	margin-bottom: 10px;
}

.adminBtn:hover{
	background-color: #f98b09;
	color: #FFF;
	border: 1px solid #FFF;
	border: none;
}

.admin{
	text-align: center;
}

.admin a{
	margin-bottom: 20px;
}

.admin label{
	padding-bottom: 10px;
}

.admin h2{
	font-family: 'bebasregular', sans-serif;
	word-spacing: 5px;
	color: #1ebdeb;
	padding-top: 150px;
}


.admin ul li {
	
	margin-right: 10px;
	padding: 10px;


}

.admin ul li a{
	font-family: 'Roboto',serif;
	color: #292929;
	font-size: 20px;
	transition: all .2s ease-in;
}

.admin ul li a:hover{
	color: #FFF;
	background-color: #f98b09;
	padding: 10px;
	/*border-radius: 10px;*/
}

.adminPage h2{
	font-family: 'bebasregular', sans-serif;
	word-spacing: 5px;
	color: #1ebdeb;
	padding-bottom: 10px;
	/*padding-top: 20px;*/
}

.adminPage label{
	padding-bottom: 10px;
}

.delete{
	padding-left: 5px;
}

.deleteAdmin {
	padding-bottom: 30px;
	padding-left: 10px;
}

.back{
	background-color: #f98b09;
	/*margin-top: 100px;*/
}

.back a{
	padding-top: 10px;
	padding-bottom: 10px;
	color: #FFF;
	padding-left: 10px;
}

.evInfo{
	padding-top: 200px;
}

.evInfo h2{
	font-family: 'bebasregular', sans-serif;
	word-spacing: 10px;
}

.evInfo a{
	padding-bottom: 20px;
}

.storiesInfo{
	padding-top: 200px;
}

.storiesInfo h2{
	font-family: 'bebasregular', sans-serif;
	word-spacing: 10px;
}

.storiesInfo h3{
	color: #1ebdeb;
	font-size: 18px;
}

.storiesInfo img {
	margin-bottom: 20px;
}

.storiesInfo p{
	text-align: justify;
}

.storiesInfo a{
	padding-bottom: 20px;
}
/* ... */

